Finished email trigger

--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 aws.region=us-east-2
-aws.accessKeyId=AKIAYS2NRZ6SU5FUARHE
-aws.secretKey=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
+aws.accessKeyId=CHAVE_ACESSO
+aws.secretKey=CHAVE_SECRETA
